testdata/e2e/examples/delete/cms.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: quick-start
data:
  foo: bar
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: quick-start-2
data:
  foo: bar
